# slicerExtension

./: CMakeLists.txt  readme.md
MyFirstModule/: CMakeLists.txt  MyFirstModule.py
MyFirstModule/Resources/UI/: MyFirstModule.ui
